[gd_scene load_steps=10 format=2]

[ext_resource path="res://PlayerGreenSkin.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://DefaultPlayerMovementData.tres" type="Resource" id=3]
[ext_resource path="res://assets/hurt.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/Jump.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/collection.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/win_sound.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/game_over.mp3" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 7.5 )

[node name="Player" type="KinematicBody2D"]
z_index = 10
collision_layer = 2
script = ExtResource( 2 )
moveData = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = ExtResource( 1 )
animation = "Run"
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7.5 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -9 )
current = true
smoothing_enabled = true

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="PainSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0

[node name="CollectionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="LadderCheck" type="RayCast2D" parent="."]
position = Vector2( 0, -17 )
enabled = true
cast_to = Vector2( 0, 20 )
collide_with_areas = true
collide_with_bodies = false

[node name="WinningSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
